<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical" android:background="@color/colorPrimary" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="50dp" android:baselineAligned="false">
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="4.0dip" android:layout_weight="1.0">
                <TextView android:textSize="16sp" android:textStyle="bold" android:textAllCaps="true" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name"  />
            </LinearLayout>
            <TextView android:textSize="16sp" android:textStyle="bold" android:textAllCaps="true" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_versi"  />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:text="Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout android:orientation="vertical" android:layout_marginLeft="10dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="15sp" android:textColor="@color/warnaTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/app_info" />
        </LinearLayout>

       <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
           android:layout_marginTop="5dp"
                android:text="Pengembang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout android:orientation="vertical" android:layout_marginLeft="10dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="15sp" android:textAllCaps="true" android:textStyle="bold" android:textColor="@color/colorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_owner" />
                <TextView android:textSize="15sp" android:textColor="@color/warnaTitle" android:id="@+id/info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/app_email" />
                <TextView android:textSize="15sp" android:textColor="@color/warnaTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/app_blog" />
            </LinearLayout>
        <TextView
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="Server API"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout android:orientation="vertical" android:layout_marginLeft="10dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="15sp" android:textAllCaps="true" android:textStyle="bold" android:textColor="@color/colorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Ican Bachor" />
            <TextView android:textSize="15sp" android:textColor="@color/warnaTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="http://ibacor.com/" />
        </LinearLayout>
        <TextView
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="Libs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout android:orientation="vertical" android:layout_marginLeft="10dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="15sp" android:textColor="@color/warnaTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="Retrofit" />
            <TextView android:textSize="15sp" android:textColor="@color/warnaTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="Realm" />
            <TextView android:textSize="15sp" android:textColor="@color/warnaTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="Butterknife" />
            <TextView android:textSize="15sp" android:textColor="@color/warnaTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="Zxing" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>